refactor and some fixes

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -1,16 +1,18 @@
 uk:
-  filters: 'Фільтри'
+  filter:
+    toggle_button: 'Фільтри'
+    companies: 'Компанії'
+    categories: 'Категорії'
+    clear: 'Скинути'
+    apply: 'Застосувати'
   company: 'Компанія'
-  companies: 'Компанії'
   category: 'Категорія'
-  categories: 'Категорії'
-  clear: 'Скинути'
-  apply: 'Застосувати'
+  back: 'Назад'
   price: 'Ціна'
   discount_price: 'Ціна зі знижкою'
   discount: 'Знижка'
   amount: 'Кількість'
-  expiration: 'Закінчується'
+  expire_on: 'Знижка закінчується'
   on_the_official_site: 'На офіційному сайті'
   enter_the_name_of_the_product: 'Введіть назву продукту...'
   search: 'Знайти'
